--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
          {{ greeting }}
     </div>
 
-    <!-- Mount the Vue.js app -->
-    <script src="index.js"></script>
+    <!-- Import and Mount the Vue.js app -->
+    <script src="main.js"></script>
     <script>
         app.mount('#app');
     </script>
