--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <!-- Vue.js core library -->
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
+    <!-- Vue.js core library v3 -->
     <script src="https://unpkg.com/vue@next"></script>
 </head>
 
@@ -24,8 +26,5 @@
 
     <!-- Import and Mount the Vue.js app -->
     <script src="main.js"></script>
-    <script>
-        app.mount('#app');
-    </script>
 </body>
 </html>
