--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!-- Doc title -->
     <title>Document</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="./assets/styles.css" />
-    <!-- Bootstrap -->
+    <link rel="stylesheet" href="./src/assets/styles.css" />
+    <!-- Bootstrap 4-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
@@ -17,14 +17,12 @@
 </head>
 
 <body>
-    <h1>My Vye.js template</h1>
-
-     <!-- Add information display -->
     <div id="app">
-         {{ greeting }}
+        <h2>{{headline}}</h2>
+         <p>{{ greeting }}</p>
     </div>
 
-    <!-- Import and Mount the Vue.js app -->
-    <script src="main.js"></script>
+    <!-- Import scripts -->
+    <script src="./src/main.js"></script>
 </body>
 </html>
